--- a/frontend/src/style/planning.css
+++ b/frontend/src/style/planning.css
@@ -10,4 +10,10 @@
   .price-change-no-change {
     background-color: #f0f0f0;  /* Light grey for no change */
   }
-  
+
+  .ag-theme-alpine {
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* Prevents scrollbars */
+}
+
